fixed logo image

--- a/home.html
+++ b/home.html
@@ -682,7 +682,7 @@ This inspired me to start <strong>“Kewl Buddies Maker Labs”</strong> – A p
                                 </div>
                             </div>
                         </div>
-                        <div class="item col-md-3 col-sm-6 mobile">
+                        <div class="item col-md-3 col-sm-6 controlled-led">
                             <div class="details">
                                 <img src="img/samples/portfolio/button_controlled_led.jpg" alt="" class="img-responsive">
                                 <div class="info-wrapper">
