--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
                                     & Practical Courses in Electronics 
                                 </div>
                                 <div class="tp-caption sfb hidden-xs" data-x="520" data-y="center" data-hoffset="0" data-voffset="150" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
-                                    <a href="#about" class="btn btn-primary btn-lg">LEARN MORE</a>
+                                    <a href="#whoWeAre" class="btn btn-primary btn-lg">LEARN MORE</a>
                                 </div>
                             </li>
 							
