--- a/home.html
+++ b/home.html
@@ -114,9 +114,9 @@
                                 <!-- LAYERS -->
 
                                 <!-- LAYER NR. 1 -->
-                                <div class="tp-caption sft fadeout" data-x="center" data-y="center" data-hoffset="0" data-voffset="0" data-speed="500" data-start="700" data-easing="Power4.easeOut">
+                                <!--<div class="tp-caption sft fadeout" data-x="center" data-y="center" data-hoffset="0" data-voffset="0" data-speed="500" data-start="700" data-easing="Power4.easeOut">
                                     <img src="img/samples/enroll-bl.png" class="macbook-image" alt="">
-                                </div>
+                                </div>-->
 
                                 <div class="tp-caption large_white_light italic sfb hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1300" data-easing="Power4.easeOut">
                                     <a href="#portfolio" class="btn btn-naked">Check Our Classes</a>
