corrected a course details wordings

--- a/home.html
+++ b/home.html
@@ -754,7 +754,7 @@ This inspired me to start <strong>“Kewl Buddies Maker Labs”</strong> – A p
                                     </span>
                                     <div class="info">
                                         <div class="name-tag">
-                                            <h5>In this lesson kids learn the concept of Rolling LEDs. Rolling LEDs are similar to festive lights where one LED is on for a brief amount of time and then turns off. At the same time the 2nd LED turns on creating an effect of rolling lights.</h5>
+                                            <h5>Kids learn the concept of Rolling LEDs. Rolling LEDs are similar to festive lights where one LED is on for a brief amount of time and then turns off. At the same time the 2nd LED turns on creating an effect of rolling lights.</h5>
                                             <span class="divider"></span>
                                             <p>Lesson 7 – Rolling Lights</p>
                                         </div>
