updated class schedule

--- a/home.html
+++ b/home.html
@@ -197,7 +197,7 @@ Set Your Child up for a Greater Success. Enroll them in this new Maker Class <a 
                     </div>
                     <div class="col-md-6">
                         <div class="media scrollpoint sp-effect2">
-                            <a class="pull-left" href="#">
+                            <a class="pull-left" role="button">
                                 <i class="media-object fa fa-bullseye fa-4x"></i>
                             </a>
                             <div class="media-body">
@@ -208,7 +208,7 @@ Set Your Child up for a Greater Success. Enroll them in this new Maker Class <a 
                             </div>
                         </div>
                         <div class="media scrollpoint sp-effect2">
-                            <a class="pull-left" href="#">
+                            <a class="pull-left" role="button">
                                 <i class="media-object fa fa-lightbulb-o fa-4x"></i>
                             </a>
                             <div class="media-body">
@@ -222,7 +222,7 @@ Set Your Child up for a Greater Success. Enroll them in this new Maker Class <a 
                     </div>
                     <div class="col-md-6">
                         <div class="media right scrollpoint sp-effect1">
-                            <a class="pull-right" href="#">
+                            <a class="pull-right" role="button">
                                 <i class="media-object fa fa-gear fa-4x"></i>
                             </a>
                             <div class="media-body">
@@ -233,7 +233,7 @@ Set Your Child up for a Greater Success. Enroll them in this new Maker Class <a 
                             </div>
                         </div>
                         <div class="media right scrollpoint sp-effect1">
-                            <a class="pull-right" href="#">
+                            <a class="pull-right" role="button">
                                 <i class="media-object fa fa-star fa-4x"></i>
                             </a>
                             <div class="media-body">
@@ -404,44 +404,44 @@ Set Your Child up for a Greater Success. Enroll them in this new Maker Class <a 
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="media media-class-schedule scrollpoint sp-effect1">
-                                    <a class="pull-left" href="#">
+                                    <a class="pull-left" role="button">
                                         <i class="media-object fa fa-clock-o fa-2x"></i>
                                     </a>
                                     <div class="media-body">
-                                        <h4 class="media-heading">Upcoming Maker 101 Class Schedule (Batch 1)</h4>
-                                        <p>Class Dates: 4/2, 4/9, 4/16, 4/23, 4/30, 5/7, 5/14, 5/21 (All Saturdays)<br/>
-										Class Timings: <span class="badge">2pm – 2:50pm</span><br/>
-										Cost: $150 per kid ($125 for early Bird!!*) (<i class="media-object fa fa-star fa-1x"></i>Early Bird Offer valid only for enrollments made by March 31st)
+                                        <h4 class="media-heading">Upcoming Maker 101 Class Schedule (for ages 10-12)</h4>
+                                        <p>Class Dates: 10/2, 10/9, 10/16, 10/23, 10/30, 11/6, 11/13, 11/20 (All Sundays)<br/>
+										Class Timings: <span class="badge">11am – 11:50am</span><br/>
+										Cost: $150 per kid ($125 for early Bird!!*) (<i class="media-object fa fa-star fa-1x"></i>Early Bird Offer valid only for enrollments made by September 30th)
 										</p>
                                     </div>
                                 </div>
                                 <div class="media media-class-schedule scrollpoint sp-effect2">
-                                    <a class="pull-left" href="#">
+                                    <a class="pull-left" role="button">
                                         <i class="media-object fa fa-clock-o fa-2x"></i>
                                     </a>
                                     <div class="media-body">
-                                        <h4 class="media-heading">Upcoming Maker 101 Class Schedule (Batch 2)</h4>
-                                        <p>Class Dates: 4/16, 4/23, 4/30, 5/7, 5/14, 5/21, 5/28, 6/4 (All Saturdays)<br/>
-										Class Timings: <span class="badge">11am – 11:50am</span><br/>
-										Cost: $150 per kid ($125 for early Bird!!*) (<i class="media-object fa fa-star fa-1x"></i>Early Bird Offer valid only for enrollments made by March 31st)
+                                        <h4 class="media-heading">Upcoming Junior Maker 101 Class Schedule(for ages 7-9)</h4>
+                                        <p>Class Dates: 10/2, 10/9, 10/16, 10/23, 10/30, 11/6, 11/13, 11/20 (All Sundays)<br/>
+										Class Timings: <span class="badge">12noon – 12:50pm</span><br/>
+										Cost: $150 per kid ($125 for early Bird!!*) (<i class="media-object fa fa-star fa-1x"></i>Early Bird Offer valid only for enrollments made by September 30th)
 										</p>
                                     </div>
                                 </div>
                                 <div class="media media-class-schedule scrollpoint sp-effect1">
-                                    <a class="pull-left" href="#">
+                                    <a class="pull-left" role="button">
                                         <i class="media-object fa fa-clock-o fa-2x"></i>
                                     </a>
                                     <div class="media-body">
                                         <h4 class="media-heading">Upcoming Maker 102 Class Schedule</h4>
-                                        <p>Class Dates: 4/16, 4/23, 4/30, 5/7, 5/14, 5/21, 5/28, 6/4 (All Saturdays).<br/>
-										Class Timings: <span class="badge">1pm – 1:50pm</span><br/>
-										Cost: $200 per kid ($150 for early Bird!!*) (<i class="media-object fa fa-star fa-1x"></i>Early Bird Offer valid only for enrollments made by March 31st)<br/>
-										Prerequisites: Maker 101
+                                        <p>Class Dates: 10/2, 10/9, 10/16, 10/23, 10/30, 11/6, 11/13, 11/20 (All Sundays).<br/>
+										Class Timings: <span class="badge">10am – 10:50am</span><br/>
+										Cost: $200 per kid ($150 for early Bird!!*) (<i class="media-object fa fa-star fa-1x"></i>Early Bird Offer valid only for enrollments made by September 30th)<br/>
+										Prerequisites: <strong>Maker 101 or Junior Maker 101</strong>
 										</p>
                                     </div>
                                 </div>
-                                <div class="media media-class-schedule scrollpoint sp-effect2">
-                                    <a class="pull-left" href="#">
+                                <!--<div class="media media-class-schedule scrollpoint sp-effect2">
+                                    <a class="pull-left" role="button">
                                         <i class="media-object fa fa-clock-o fa-2x"></i>
                                     </a>
                                     <div class="media-body">
@@ -454,7 +454,7 @@ Set Your Child up for a Greater Success. Enroll them in this new Maker Class <a 
                                     </div>
                                 </div>
                                 <div class="media media-class-schedule scrollpoint sp-effect1">
-                                    <a class="pull-left" href="#">
+                                    <a class="pull-left" role="button">
                                         <i class="media-object fa fa-send-o fa-2x"></i>
                                     </a>
                                     <div class="media-body">
@@ -463,7 +463,7 @@ Set Your Child up for a Greater Success. Enroll them in this new Maker Class <a 
 										Class Timings: <span class="badge">1:10pm – 2pm</span>							
 										</p>
                                     </div>
-                                </div>
+                                </div>-->
                                
                             </div>
                         </div>
