corrected the email address for kewl

--- a/home.html
+++ b/home.html
@@ -341,7 +341,7 @@ Set Your Child up for a Greater Success. Enroll them in this new Maker Class <a 
                             <li>It will be kept in your child’s file.</li>
                             <li>Your signature means you have acknowledged the receipt of the handbook and understood the policies and procedures of Kewl Buddies Maker Labs.</li>
                             <li>Parent’s Handbook is emailed to all Parents after enrollment and registration confirmation. </li>
-							<li>Please call us or email <a href="mailto:info@jamsportland.com">info@KewlBuddiesMakerLabs.com</a> if you have not received your copy after registration. Thank you!</li>
+							<li>Please call us or email <a href="mailto:info@kewlbuddiesmakerlabs.com">info@KewlBuddiesMakerLabs.com</a> if you have not received your copy after registration. Thank you!</li>
                         </ul>
 						<h5><a href="/img/files/KBMLHandbookRev20160221.pdf">Download the handbook</a></h5>
                     </div>
@@ -896,7 +896,7 @@ This inspired me to start <strong>“Kewl Buddies Maker Labs”</strong> – A p
                             </div>
                             <div class="detail">
                                 <h4>email us</h4>
-                                <p><a href="mailto:info@jamsportland.com">info@KewlBuddiesMakerLabs.com</a></p>
+                                <p><a href="mailto:info@kewlbuddiesmakerlabs.com">info@KewlBuddiesMakerLabs.com</a></p>
                             </div>
                             <div class="detail">
                                 <ul class="clearfix">
