adjusted the texts to be well inside class image

--- a/home.html
+++ b/home.html
@@ -1033,7 +1033,7 @@ This inspired me to start <strong>“Kewl Buddies Maker Labs”</strong> – A p
                                     </span>
                                     <div class="info">
                                         <div class="name-tag">
-                                            <h5>In this lesson kids learn the concept of Rolling LEDs. Rolling LEDs are similar to festive lights where one LED is on for a brief amount of time and then turns off. At the same time the 2nd LED turns on creating an effect of rolling lights.</h5>
+                                            <h5>This teaches the concept of Rolling LEDs. Rolling LEDs are similar to festive lights where one LED is on for a brief amount of time and then turns off. At the same time the 2nd LED turns on creating an effect of rolling lights.</h5>
                                             <span class="divider"></span>
                                             <p>Lesson 14 – Rolling Lights:</p>
                                         </div>
@@ -1083,7 +1083,7 @@ This inspired me to start <strong>“Kewl Buddies Maker Labs”</strong> – A p
                                     </span>
                                     <div class="info">
                                         <div class="name-tag">
-                                            <h5>This lesson introduces the concept of frequency to the kids using a buzzer. Kids create a circuit to sound a buzzer thereby learning more about transistors.
+                                            <h5>This introduces the concept of frequency using a buzzer. Kids create a circuit to sound a buzzer thereby learning more about transistors.
 Kids build Simon says game using Buzzer and other electronic components.</h5>
                                             <span class="divider"></span>
                                             <p>Lesson 1 – Buzzer:</p>
