updated isotop script to show the required filter

--- a/home.html
+++ b/home.html
@@ -635,7 +635,6 @@ This inspired me to start <strong>“Kewl Buddies Maker Labs”</strong> – A p
                         <div class="section-heading scrollpoint sp-effect3">
                             <h1>Class Details</h1>
 							<h4>Types of classes being provided are: <strong>JUNIOR MAKER 101</strong>, <strong>MAKER 101</strong> and <strong>MAKER 102</strong></h4>
-							<h4>The pace of the class is designed for ages 7 to 9 …</h4>
                             <h4>This is the list of Lessons that the 8 week long <strong>Maker</strong> classes will focus on…</h4>
                             <span class="divider"></span>
                         </div>
@@ -643,8 +642,8 @@ This inspired me to start <strong>“Kewl Buddies Maker Labs”</strong> – A p
                 </div>
                 <div class="row">
                     <div id="filters" class="button-group">
-                        <button data-filter="*" class="current">all classes</button>
-                        <button data-filter=".junior-maker-101">JUNIOR MAKER 101</button>
+                        <!--<button data-filter="*" class="current">all classes</button>-->
+                        <button data-filter=".junior-maker-101" class="current">JUNIOR MAKER 101</button>
                         <button data-filter=".maker-101">MAKER 101</button>
                         <button data-filter=".maker-102">MAKER 102</button>
                     </div>
@@ -1283,7 +1282,7 @@ Children Build Joystick Game; ping - pong here.</h5>
                     <div class="col-md-8 col-md-push-2 clearfix">
                         <div class="section-heading scrollpoint sp-effect3">
                             <h1>get in touch</h1>
-                            <h4>You can call or mail us for all the details.</h4>
+                            <h4>Please email your <span class="brandy">child name</span>, <span class="brandy">age</span> and <span class="brandy">your contact</span> details to confirm enrollment.</h4>
                             <span class="divider"></span>
                         </div>
                     </div>
@@ -1292,9 +1291,9 @@ Children Build Joystick Game; ping - pong here.</h5>
                     <div class="col-md-6">
                         <div class="contact-details">
                             <div class="detail">
-                                <h4>Kewl Buddies Maker
-                                    <span class="brandy">labs</span></h4>
-                                <p>portland, OR</p>
+                                <!--<h4>Kewl Buddies Maker <span class="brandy">labs</span></h4>-->
+				<h4>Kewl Buddies Maker labs</h4>
+                                <p>Portland, OR</p>
                             </div>
                             <div class="detail">
                                 <h4>call us</h4>
